--- a/app/index.html
+++ b/app/index.html
@@ -68,15 +68,15 @@
     <!-- endbuild -->
       
     <!-- build:js(.) scripts/vendor.js -->
-    <script src="../bower_components/jquery/dist/jquery.js"></script>
-    <script src="../bower_components/json3/lib/json3.js"></script>
-    <script src="../bower_components/angular/angular.js"></script>
-	<script src="../bower_components/angular-route/angular-route.js"></script>
-    <script src="../bower_components/angular-resource/angular-resource.js"></script>
-	<script src="../bower_components/angular-sanitize/angular-sanitize.js"></script>
-    <script src="../bower_components/angular-animate/angular-animate.js"></script>
-	<script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-    <script src="../bower_components/angular-file-upload/angular-file-upload.js"></script>    
+    <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/json3/lib/json3.js"></script>
+    <script src="bower_components/angular/angular.js"></script>
+	<script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/angular-resource/angular-resource.js"></script>
+	<script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+    <script src="bower_components/angular-animate/angular-animate.js"></script>
+	<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="bower_components/angular-file-upload/angular-file-upload.js"></script>    
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
