--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,7 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li>
-				<a href="#/" class="btn"><span class="glyphicon glyphicon-plus"></span> Add new report</a>				
+				<a href="#/new" class="btn"><span class="glyphicon glyphicon-plus"></span> Add new report</a>				
 			</li>
           </ul>
           
@@ -83,6 +83,7 @@
     <script src="plcgi/eventbus.js"></script>
     <script src="scripts/app.js"></script>
     
+    <script src="scripts/controllers/reports.js"></script>
     <script src="scripts/controllers/report.js"></script>
     <script src="scripts/controllers/upload.js"></script>
     <!-- endbuild -->
